--- a/SocialSecurity/pom.xml
+++ b/SocialSecurity/pom.xml
@@ -113,7 +113,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.8.7</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>1.9.5</version>
+        </dependency>
     </dependencies>
 
     <build>
