--- a/SocialSecurity/pom.xml
+++ b/SocialSecurity/pom.xml
@@ -16,6 +16,11 @@
     
     <dependencies>
         <dependency>
+            <groupId>inria</groupId>
+            <artifactId>FBCrawler</artifactId>
+            <version>0.2</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
@@ -117,6 +122,16 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
             <version>1.9.5</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.devbury</groupId>
+            <artifactId>spring-boot-starter-threadscope</artifactId>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
