--- a/SocialSecurity/pom.xml
+++ b/SocialSecurity/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>inria</groupId>
             <artifactId>FBCrawler</artifactId>
-            <version>0.2.1</version>
+            <version>0.3</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -155,6 +155,7 @@
                 <version>2.3</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                     <warName>SocialSecurity</warName>
                 </configuration>
             </plugin>
             <plugin>
